docs: Remove AGENTS.md references from README and add to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -49,6 +49,7 @@ android/local.properties
 
 # Project-specific documentation and context
 context/
+AGENTS.md
 
 # IDE and editor specific files
 .obsidian/
