--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
 
   # Dependency Injection
   get_it: ^7.7.0
+  injectable: ^2.4.0
 
   # HTTP Client
   dio: ^5.4.0
@@ -34,6 +35,13 @@ dependencies:
 
   # Logging
   logging: ^1.2.0
+
+  # OAuth2 / Deep Linking
+  flutter_inappwebview: ^6.0.0
+  app_links: ^6.0.0
+
+  # Crypto for PKCE
+  crypto: ^3.0.3
 
 dev_dependencies:
   flutter_test:
@@ -48,7 +56,9 @@ dev_dependencies:
 
   # Testing
   mocktail: ^1.0.0
+  bloc_test: ^9.1.7
   build_runner: ^2.4.8
+  injectable_generator: ^2.4.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
