feat: Implement offline attachment caching and local file opening
- Add attachment entity, model, and use case for viewing attachments
- Implement local attachment download and caching (≤5MB limit)
- Add FileProvider configuration for Android file sharing
- Update AttachmentListItem to use open_filex for local files
- Add cache fallback for attachments when offline or server errors
- Download attachments automatically when caching issue list
- Update tests for new attachment functionality
- Add implementation documentation

Fixes FileUriExposedException on Android by using FileProvider
Supports both Android and iOS platforms

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,8 +40,17 @@ dependencies:
   flutter_inappwebview: ^6.0.0
   app_links: ^6.0.0
 
+  # File System (for local attachment storage)
+  path_provider: ^2.1.1
+  path: ^1.8.3
+
   # Crypto for PKCE
   crypto: ^3.0.3
+
+  # URL Launcher for opening files
+  url_launcher: ^6.2.0
+  # Open local files (handles FileProvider automatically on Android)
+  open_filex: ^4.6.0
 
 dev_dependencies:
   flutter_test:
