feat: implement issue edit with offline support and sync functionality
- Add issue edit functionality (subject, description, status, priority)
- Implement offline editing with local storage
- Add sync and discard buttons for pending offline changes
- Add attachment upload capability (no deletion from app)
- Fix offline cache loading when returning to issue list
- Fix hasPendingSync flag not being read from JSON
- Add ConnectivityService for network status detection
- Add custom exceptions (Conflict, Validation, Network, Server, NotFound)
- Update IssueEntity with hasPendingSync field
- Implement sync and discard use cases
- Add pending sync indicators in issue list
- Fix issue list reload after editing

All changes follow Clean Architecture and TDD principles.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   path_provider: ^2.1.1
   path: ^1.8.3
 
+  # Network connectivity detection
+  connectivity_plus: ^6.0.0
+
   # Crypto for PKCE
   crypto: ^3.0.3
 
