feat: obtener estados disponibles específicos del work package al editar
- Agregado campo statusId a IssueEntity e IssueModel para búsqueda precisa
- Implementado método getWorkPackageForm en data source para obtener schema
- Creado use case GetAvailableStatusesForIssueUseCase
- Mejorado _findStatusEntity para buscar por ID, nombre o enum (maneja 'Workaround')
- Implementada extracción de estados disponibles del schema del form endpoint
- Agregado logging detallado para debugging del schema
- Actualizado IssueDetailCubit para usar nuevo use case al entrar en modo edición
- Mejora: estado actual ahora se selecciona correctamente en dropdown (incluye 'Workaround')

Resuelve: muestra solo estados habilitados para el tipo de work package específico

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,10 @@ dependencies:
   # Open local files (handles FileProvider automatically on Android)
   open_filex: ^4.6.0
 
+  # File and image picking
+  file_picker: ^8.1.2
+  image_picker: ^1.1.2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
