--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
 
   # UI
   cupertino_icons: ^1.0.8
+  intl: ^0.20.2
 
   # State Management
   flutter_bloc: ^8.1.6
@@ -88,6 +89,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+  generate: true
 
   assets:
     - assets/icons/
